crates/gridwell-writer-html/tests/snapshots/snapshots__align-left-center-right.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_center { text-align: center }
    .gw__al_left { text-align: left }
    .gw__al_right { text-align: right }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Left</th>
        <th class="gw__al_center">Center</th>
        <th class="gw__al_right">Right</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>aaa</td>
        <td class="gw__al_center">bbb</td>
        <td class="gw__al_right">ccc</td>
      </tr>
      <tr>
        <td>d</td>
        <td class="gw__al_center">e</td>
        <td class="gw__al_right">f</td>
      </tr>
    </tbody>
  </table>
</div>
