crates/gridwell-writer-html/tests/snapshots/snapshots__cell-colors.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
    .gw_cool { color: #FFFFFF; background-color: #2980B9 }
    .gw_hot { color: #FFFFFF; background-color: #C0392B }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Label</th>
        <th class="gw__al_left">Temp</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Fire</td>
        <td class="gw_hot">hot</td>
      </tr>
      <tr>
        <td>Ice</td>
        <td class="gw_cool">cold</td>
      </tr>
    </tbody>
  </table>
</div>
