crates/gridwell-writer-html/tests/snapshots/snapshots__column-widths-mixed.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
  </style>
  <table class="gw_table" style="width: 100%">
    <colgroup>
      <col style="width: 120px">
      <col style="width: 25%">
      <col style="width: 1fr">
      <col>
    </colgroup>
    <thead>
      <tr>
        <th class="gw__al_left">Fixed</th>
        <th class="gw__al_left">Percent</th>
        <th class="gw__al_left">Fraction</th>
        <th class="gw__al_left">Auto</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>120px</td>
        <td>25%</td>
        <td>1fr</td>
        <td>auto</td>
      </tr>
    </tbody>
  </table>
</div>
