crates/gridwell-writer-html/tests/snapshots/snapshots__combining-chars.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Form</th>
        <th class="gw__al_left">Text</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>composed</td>
        <td>café</td>
      </tr>
      <tr>
        <td>decomposed</td>
        <td>café</td>
      </tr>
      <tr>
        <td>stacked</td>
        <td>à́̂</td>
      </tr>
    </tbody>
  </table>
</div>
