crates/gridwell-writer-html/tests/snapshots/snapshots__conditional-striping.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
    .gw__c0 { background-color: #ECF0F1 }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Index</th>
        <th class="gw__al_left">Value</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="gw__c0">0</td>
        <td class="gw__c0">a</td>
      </tr>
      <tr>
        <td>1</td>
        <td>b</td>
      </tr>
      <tr>
        <td class="gw__c0">2</td>
        <td class="gw__c0">c</td>
      </tr>
      <tr>
        <td>3</td>
        <td>d</td>
      </tr>
    </tbody>
  </table>
</div>
