crates/gridwell-writer-html/tests/snapshots/snapshots__financial-report.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_total { font-weight: bold; background-color: #F5F5F5 }
  </style>
  <div role="heading" aria-level="1">
    Quarterly P&amp;L
  </div>
  <table class="gw_table">
    <thead>
      <tr>
        <th>Line item</th>
        <th>Q1</th>
        <th>Q2</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Revenue</td>
        <td>$1,200</td>
        <td>$1,350</td>
      </tr>
      <tr>
        <td>COGS</td>
        <td>$700</td>
        <td>$760</td>
      </tr>
      <tr>
        <td>Opex</td>
        <td>$300</td>
        <td>$320</td>
      </tr>
      <tr>
        <td class="gw_total">Net income</td>
        <td class="gw_total">$200</td>
        <td class="gw_total">$270</td>
      </tr>
    </tbody>
  </table>
  <div class="gw_footer">
    <div class="gw_source_notes">
      <p>
        Unaudited management figures.
      </p>
    </div>
  </div>
</div>
